fixed overflow problem with images

--- a/app/_component/_themeAble/_text/imageTextblob/imageTextblob.css
+++ b/app/_component/_themeAble/_text/imageTextblob/imageTextblob.css
@@ -5,6 +5,7 @@ image-text-blob{
     flex-wrap: nowrap;
     justify-content: flex-end;
     padding: 150px 100px 150px 100px;
+    overflow: hidden;
 }
 
 content-box {
